# Lightstage

./: Compute_normal.m  EWnorm.m  SGPS_Colour_diffuse.m  SGPS_Grayscale_diffuse.m  SGPS_Hybrid_diffuse.m  align_images.m  animate_imgs.m  gnc  linearize_raw_images.pl  ovelay_images.m  read_flow.m  render_diffuse.m  tmp.m  tmp1.m  tmp2.m
Lightstage_geometry/: CMakeLists.txt  main.cpp
horn_schunck/: estimate_flow_hs.m
